Full system upgrade to PRO version
